--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -8,6 +8,7 @@ bind C-Space send-prefix
 bind -n M-H previous-window
 bind -n M-L next-window
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'laktak/extrakto'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
