tmux pane adjust

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -42,7 +42,11 @@ bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
-# set -g @catppuccin_window_left_separator ""
+bind -n M-H resize-pane -L 5
+bind -n M-L resize-pane -R 5
+bind -n M-K resize-pane -U 5
+bind -n M-J resize-pane -D 5
+set -g @catppuccin_window_left_separator ""
 # set -g @catppuccin_window_right_separator " "
 # set -g @catppuccin_window_middle_separator " █"
 # set -g @catppuccin_window_number_position "right"
