tidy up nvim config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -13,6 +13,14 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'omerxx/tmux-floax'
+# set -g history-limit 1000000  
+# set -g @floax-width '80%'
+# set -g @floax-height '80%'
+# set -g @floax-border-color 'magenta'
+# set -g @floax-text-color 'blue'
+# set -g @floax-bind 'p'
+# set -g @floax-change-path 'false'
 set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'schasse/tmux-jump'
