--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,26 +1,29 @@
-set -g default-terminal "$TERM"
-set -ag terminal-overrides ",$TERM:Tc"
 set-option -sa terminal-features ',$TERM:RGB'
+
 unbind C-b
 set -g prefix C-Space
 set -g mouse on
 bind C-Space send-prefix
+
 bind -n M-H previous-window
 bind -n M-L next-window
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'laktak/extrakto'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+
 # set -g @plugin 'catppuccin/tmux'
 # set -g @plugin 'omerxx/tmux-floax'
-# set -g history-limit 1000000  
+# set -g history-limit 1000000
 # set -g @floax-width '80%'
 # set -g @floax-height '80%'
 # set -g @floax-border-color 'magenta'
 # set -g @floax-text-color 'blue'
 # set -g @floax-bind 'p'
 # set -g @floax-change-path 'false'
+
 set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'schasse/tmux-jump'
@@ -34,12 +37,11 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi C-v send-keys -X copy-selection-and-cancel
 unbind r
+#
 # for splits
-# bind-key -n 'C-\' run-shell -b "${HOME}/.local/bin/tmux-toggle"
-
+set -g @jump-key 'S'
 # or, for floats
 set -g pane-border-status top
-bind-key -n 'C-\' run-shell -b "${HOME}/.local/tmux-toggle"
 bind r source-file ~/.config/tmux/tmux.conf
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
@@ -54,30 +56,14 @@ bind -n M-H resize-pane -L 5
 bind -n M-L resize-pane -R 5
 bind -n M-K resize-pane -U 5
 bind -n M-J resize-pane -D 5
-set -g @catppuccin_window_left_separator ""
-# set -g @catppuccin_window_right_separator " "
-# set -g @catppuccin_window_middle_separator " █"
-# set -g @catppuccin_window_number_position "right"
-#
-# set -g @catppuccin_window_default_fill "number"
-# set -g @catppuccin_window_default_text "#W"
 bind-key -n C-S-Left previous-window
 bind-key -n C-S-Right next-window
-# set -g @catppuccin_window_current_fill "number"
-# set -g @catppuccin_window_current_text "#W"
-# set -g @catppuccin_status_modules_right "directory session"
-# set -g @catppuccin_status_left_separator  " "
-# set -g @catppuccin_status_right_separator ""
-# set -g @catppuccin_status_fill "icon"
-# set -g @catppuccin_status_connect_separator "no"
-#
-# set -g @catppuccin_directory_text "#{pane_current_path}"
 set -g @tokyo-night-tmux_window_id_style digital
 set -g @tokyo-night-tmux_pane_id_style hsquare
 set -g @tokyo-night-tmux_zoom_id_style dsquare
 set -g @tokyo-night-tmux_show_datetime 0
 set -g @tokyo-night-tmux_date_format DMY
-set -g @tokyo-night-tmux_time_format 24H 
+set -g @tokyo-night-tmux_time_format 24H
 set -g @tokyo-night-tmux_show_music 1
 # set -g @tokyo-night-tmux_show_netspeed 1
 # set -g @tokyo-night-tmux_netspeed_iface "en0" # Detected via default route
@@ -90,3 +76,9 @@ set -g @tokyo-night-tmux_show_wbg 0
 set -g @tokyo-night-tmux_show_git 1
 # set -g @tokyo-night-tmux_battery_name "BAT1"  # some linux distro have 'BAT0'
 # set -g @tokyo-night-tmux_battery_low_threshold 21 # defaultj
+## Undercurl
+#
+# Undercurl
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
