--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-font_size 10.5
+font_size 14
 window_padding_width 2
 include theme.conf
 include keymap.conf
@@ -14,5 +14,5 @@ tab_title_template  " {index} {title} {bell_symbol}"
 
 allow_remote_control yes
 # listen_on unix:@mykitty
-hide_window_decorations yes
+hide_window_decorations titlebar-only
 shell_integration enabled
