--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,43 +1,21 @@
-foreground              #FFFFFF
-background              #252C34
-selection_foreground    #252C34
-selection_background    #FFFFFF
-cursor                  #9A8B6B 
-cursor_text_color       #141414
-
-active_tab_foreground     #252C34
-active_tab_background     #5B5950
-inactive_tab_foreground   #5B5950
-inactive_tab_background   #252C34
-
-# black
-color0      #293C52
-color8      #57718F
-
-# red
-color1      #FFEFCC
-color9      #F0DAAA
-
-# green
-color2      #CCE7FF
-color10     #AACFF0
-
-# yellow
-color3      #FFF6CC
-color11     #F0E3AA
-
-# blue
-color4      #9ABDE6
-color12     #9ABDE6
-
-# magenta
-color5      #9AC2E6
-color13     #9AC2E6
-
-# cyan
-color6      #E6D89A
-color14     #E6D89A
-
-# white
-color7      #FFEFCC
-color15     #F0DAAA
+background #1e1f28
+foreground #f8f8f2
+cursor #bbbbbb
+selection_background #44475a
+color0 #000000
+color8 #545454
+color1 #ff5555
+color9 #ff5454
+color2 #50fa7b
+color10 #50fa7b
+color3 #f0fa8b
+color11 #f0fa8b
+color4 #bd92f8
+color12 #bd92f8
+color5 #ff78c5
+color13 #ff78c5
+color6 #8ae9fc
+color14 #8ae9fc
+color7 #bbbbbb
+color15 #ffffff
+selection_foreground #1e1f28
