more kitty changes

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,16 +2,17 @@ font_size 14
 window_padding_width 2
 include theme.conf
 include keymap.conf
-
+background_opacity    0.8
+background_blur 20
 font_family      JetBrainsMono Nerd Font Mono
 bold_font        JetBrainsMono Nerd Font Mono Extra Bold
 bold_italic_font JetBrainsMono Nerd Font Mono Extra Bold Italic
-
+listen_on unix:/tmp/kitty
 tab_bar_edge top
 tab_bar_style   separator
 tab_separator       " "
 tab_title_template  " {index} {title} {bell_symbol}"
-
+nvim --headless +'KittyScrollbackGenerateKittens'
 allow_remote_control yes
 # listen_on unix:@mykitty
 hide_window_decorations titlebar-only
