--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,8 +1,8 @@
-background #1e1f28
+background #000000
 foreground #f8f8f2
 cursor #bbbbbb
 selection_background #44475a
-color0 #000000
+color0 #444444
 color8 #545454
 color1 #ff5555
 color9 #ff5454
