--- a/.config/kitty/keymap.conf
+++ b/.config/kitty/keymap.conf
@@ -1,6 +1,6 @@
 # Window
 map ctrl+\ new_window
-
+map ctrl+shift+l next_layout
 # Tab
 map ctrl+1 goto_tab 1
 map ctrl+2 goto_tab 2
@@ -8,27 +8,51 @@ map ctrl+3 goto_tab 3
 map ctrl+4 goto_tab 4
 map ctrl+t new_tab
 map ctrl+w close_tab
-
-# Smart-split.nvim keys
-map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
-map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
-map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
-map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
-
-map alt+j kitten pass_keys.py relative_resize down  3 alt+j
-map alt+k kitten pass_keys.py relative_resize up    3 alt+k
-map alt+h kitten pass_keys.py relative_resize left  3 alt+h
-map alt+l kitten pass_keys.py relative_resize right 3 alt+l
-
-# Supper power keys
+#
+# # Smart-split.nvim keys
+# map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
+# map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
+# map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
+# map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
+#
+# map alt+j kitten pass_keys.py relative_resize down  3 alt+j
+# map alt+k kitten pass_keys.py relative_resize up    3 alt+k
+# map alt+h kitten pass_keys.py relative_resize left  3 alt+h
+# map alt+l kitten pass_keys.py relative_resize right 3 alt+l
+#
+# # Supper power keys
 map ctrl+; kitten toggle_term.py
 
 # kitty-scrollback.nvim Kitten alias
-action_alias kitty_scrollback_nvim kitten /home/tieu/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
-
+action_alias kitty_scrollback_nvim kitten /Users/josephburgess/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
 # Browse scrollback buffer in nvim
 map kitty_mod+h kitty_scrollback_nvim
 # Browse output of the last shell command in nvim
 map kitty_mod+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
 # Show clicked command output in nvim
 mouse_map ctrl+shift+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
+
+map ctrl+j neighboring_window down
+map ctrl+k neighboring_window up
+map ctrl+h neighboring_window left
+map ctrl+l neighboring_window right
+
+# Unset the mapping to pass the keys to neovim
+map --when-focus-on var:IS_NVIM ctrl+j
+map --when-focus-on var:IS_NVIM ctrl+k
+map --when-focus-on var:IS_NVIM ctrl+h
+map --when-focus-on var:IS_NVIM ctrl+l
+
+# the 3 here is the resize amount, adjust as needed
+map alt+j kitten relative_resize.py down  3
+map alt+k kitten relative_resize.py up    3
+map alt+h kitten relative_resize.py left  3
+map alt+l kitten relative_resize.py right 3
+
+map --when-focus-on var:IS_NVIM alt+j
+map --when-focus-on var:IS_NVIM alt+k
+map --when-focus-on var:IS_NVIM alt+h
+map --when-focus-on var:IS_NVIM alt+l
+
+map kitty_mod+Tab kitten hints --customize-processing custom_hints.py
+map ctrl+f launch --type=overlay --stdin-source=@screen_scrollback /bin/sh -c "/opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i | kitty +kitten clipboard"
