further updates kitty

--- a/.config/kitty/keymap.conf
+++ b/.config/kitty/keymap.conf
@@ -31,28 +31,17 @@ map kitty_mod+h kitty_scrollback_nvim
 map kitty_mod+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
 # Show clicked command output in nvim
 mouse_map ctrl+shift+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
-
-map ctrl+j neighboring_window down
-map ctrl+k neighboring_window up
-map ctrl+h neighboring_window left
-map ctrl+l neighboring_window right
-
-# Unset the mapping to pass the keys to neovim
-map --when-focus-on var:IS_NVIM ctrl+j
-map --when-focus-on var:IS_NVIM ctrl+k
-map --when-focus-on var:IS_NVIM ctrl+h
-map --when-focus-on var:IS_NVIM ctrl+l
-
-# the 3 here is the resize amount, adjust as needed
-map alt+j kitten relative_resize.py down  3
-map alt+k kitten relative_resize.py up    3
-map alt+h kitten relative_resize.py left  3
-map alt+l kitten relative_resize.py right 3
-
-map --when-focus-on var:IS_NVIM alt+j
-map --when-focus-on var:IS_NVIM alt+k
-map --when-focus-on var:IS_NVIM alt+h
-map --when-focus-on var:IS_NVIM alt+l
-
+map kitty_mod+j kitten pass_keys.py neighboring_window bottom kitty_mod+j
+map kitty_mod+k kitten pass_keys.py neighboring_window top    kitty_mod+k
+map kitty_mod+h kitten pass_keys.py neighboring_window left   kitty_mod+h
+map kitty_mod+l kitten pass_keys.py neighboring_window right  kitty_mod+l
 map kitty_mod+Tab kitten hints --customize-processing custom_hints.py
-map ctrl+f launch --type=overlay --stdin-source=@screen_scrollback /bin/sh -c "/opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i | kitty +kitten clipboard"
+map kitty_mod+f launch --type=overlay --stdin-source=@screen_scrollback /bin/sh -c "/opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i | kitty +kitten clipboard"
+map kitty_mod+j kitten pass_keys.py bottom kitty_mod+j "^.* - nvim$"
+map kitty_mod+k kitten pass_keys.py top    kitty_mod+k "^.* - nvim$"
+map kitty_mod+h kitten pass_keys.py left   kitty_mod+h "^.* - nvim$"
+map kitty_mod+l kitten pass_keys.py right  kitty_mod+l "^.* - nvim$"
+map alt+j no_op
+map alt+k no_op
+map alt+h no_op
+map alt+l no_op
