--- a/.config/kitty/keymap.conf
+++ b/.config/kitty/keymap.conf
@@ -1,11 +1,14 @@
 # Window
 map ctrl+\ new_window
-map ctrl+shift+l next_layout
+map ctrl+shift+; next_layout
 # Tab
 map ctrl+1 goto_tab 1
 map ctrl+2 goto_tab 2
 map ctrl+3 goto_tab 3
 map ctrl+4 goto_tab 4
+map ctrl+5 goto_tab 5
+map ctrl+6 goto_tab 6
+map ctrl+7 goto_tab 7
 map ctrl+t new_tab
 map ctrl+w close_tab
 #
@@ -26,7 +29,7 @@ map ctrl+; kitten toggle_term.py
 # kitty-scrollback.nvim Kitten alias
 action_alias kitty_scrollback_nvim kitten /Users/josephburgess/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
 # Browse scrollback buffer in nvim
-map kitty_mod+h kitty_scrollback_nvim
+map kitty_mod+y kitty_scrollback_nvim
 # Browse output of the last shell command in nvim
 map kitty_mod+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
 # Show clicked command output in nvim
