add kitten for toggling opacity

--- a/.config/kitty/keymap.conf
+++ b/.config/kitty/keymap.conf
@@ -32,14 +32,16 @@ action_alias kitty_scrollback_nvim kitten /Users/josephburgess/.local/share/nvim
 map kitty_mod+y kitty_scrollback_nvim
 # Browse output of the last shell command in nvim
 map kitty_mod+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
+# map kitty_mod+f kitty_scrollback_nvim --config search
+map kitty_mod+f combine : show_scrollback : send_text normal,application /
 # Show clicked command output in nvim
 mouse_map ctrl+shift+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
 map kitty_mod+j kitten pass_keys.py neighboring_window bottom kitty_mod+j
 map kitty_mod+k kitten pass_keys.py neighboring_window top    kitty_mod+k
 map kitty_mod+h kitten pass_keys.py neighboring_window left   kitty_mod+h
 map kitty_mod+l kitten pass_keys.py neighboring_window right  kitty_mod+l
-map kitty_mod+Tab kitten hints --customize-processing custom_hints.py
-map kitty_mod+f launch --type=overlay --stdin-source=@screen_scrollback /bin/sh -c "/opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i | kitty +kitten clipboard"
+map kitty_mod+, kitten hints --customize-processing custom_hints.py
+# map kitty_mod+c launch --type=overlay --stdin-source=@screen_scrollback /bin/sh -c "/opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i | kitty +kitten clipboard"
 map kitty_mod+j kitten pass_keys.py bottom kitty_mod+j "^.* - nvim$"
 map kitty_mod+k kitten pass_keys.py top    kitty_mod+k "^.* - nvim$"
 map kitty_mod+h kitten pass_keys.py left   kitty_mod+h "^.* - nvim$"
@@ -48,3 +50,4 @@ map alt+j no_op
 map alt+k no_op
 map alt+h no_op
 map alt+l no_op
+map kitty_mod+o kitten toggle_opacity.py
