--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -17,3 +17,4 @@ allow_remote_control yes
 # listen_on unix:@mykitty
 hide_window_decorations titlebar-only
 shell_integration enabled
+dynamic_background_opacity yes
