--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -18,3 +18,10 @@ allow_remote_control yes
 hide_window_decorations titlebar-only
 shell_integration enabled
 dynamic_background_opacity yes
+draw_minimal_borders       False
+single_window_margin_width 0
+tab_bar_style              powerline
+tab_powerline_style        slanted
+window_border_width        1
+window_margin_width        2.5
+window_padding_width       5.0
