--- a/.config/yazi/keymap.toml
+++ b/.config/yazi/keymap.toml
@@ -1,4 +1,9 @@
 [[manager.prepend_keymap]]
-on   = [ "<C-s>" ]
-run  = 'shell "$SHELL" --block --confirm'
+on = ["<C-s>"]
+run = 'shell "$SHELL" --block --confirm'
 desc = "Open shell here"
+
+[[manager.prepend_keymap]]
+on = ["<C-g>"]
+run = 'cd --interactive'
+desc = 'Interactive cd'
