add themes to kitty

--- a/.config/kitty/keymap.conf
+++ b/.config/kitty/keymap.conf
@@ -51,3 +51,4 @@ map alt+k no_op
 map alt+h no_op
 map alt+l no_op
 map kitty_mod+o kitten toggle_opacity.py
+map kitty_mod+d kitten toggle_theme.py
