--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,5 @@
 font_size 14
 window_padding_width 2
-include theme.conf
 include keymap.conf
 background_opacity    0.75
 background_blur 15
@@ -25,3 +24,4 @@ tab_powerline_style        slanted
 # window_border_width        1
 # window_margin_width        2.5
 # window_padding_width       5.0
+include current-theme.conf
