Update karabiner config; fix broken lualine

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,8 +1,11 @@
 font_size 14
+# background_image ~/Pictures/Space_Spiral.png
+# background_tint 0.8
+# background_image_layout scaled
 window_padding_width 2
 include keymap.conf
-background_opacity 0.85
-background_blur 15
+background_opacity 0.75
+background_blur 10
 # font_family      JetBrainsMono Nerd Font Mono
 # font_family      family="Iosevka Custom"
 # bold_font        auto
