--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -118,22 +118,12 @@ alt-shift-ctrl-cmd-1 = 'workspace 1'
 alt-shift-ctrl-cmd-2 = 'workspace 2'
 alt-shift-ctrl-cmd-3 = 'workspace 3'
 alt-shift-ctrl-cmd-4 = 'workspace 4'
-alt-shift-ctrl-cmd-5 = 'workspace 5'
-alt-shift-ctrl-cmd-6 = 'workspace 6'
-alt-shift-ctrl-cmd-7 = 'workspace 7'
-alt-shift-ctrl-cmd-8 = 'workspace 8'
-alt-shift-ctrl-cmd-9 = 'workspace 9'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
 alt-shift-ctrl-1 = 'move-node-to-workspace 1'
 alt-shift-ctrl-2 = 'move-node-to-workspace 2'
 alt-shift-ctrl-3 = 'move-node-to-workspace 3'
 alt-shift-ctrl-4 = 'move-node-to-workspace 4'
-alt-shift-ctrl-5 = 'move-node-to-workspace 5'
-alt-shift-ctrl-6 = 'move-node-to-workspace 6'
-alt-shift-ctrl-7 = 'move-node-to-workspace 7'
-alt-shift-ctrl-8 = 'move-node-to-workspace 8'
-alt-shift-ctrl-9 = 'move-node-to-workspace 9'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
 alt-tab = 'workspace-back-and-forth'
@@ -169,3 +159,15 @@ if.app-id = 'com.google.Chrome'
 if.window-title-regex-substring = 'Picture-in-picture'
 run = 'layout floating'
 check-further-callbacks = true
+
+[[on-window-detected]]
+if.app-id = 'net.kovidgoyal.kitty'
+run = 'move-node-to-workspace 1'
+
+[[on-window-detected]]
+if.app-id = 'org.mozilla.firefox'
+run = 'move-node-to-workspace 2'
+
+[[on-window-detected]]
+if.app-id = 'com.tinyspeck.slackmacgap'
+run = 'move-node-to-workspace 3'
