--- a/.gitconfig
+++ b/.gitconfig
@@ -7,3 +7,16 @@
 	defaultBranch = main
 [core]
 	excludesfile = /Users/josephburgess/.gitignore_global
+	pager = delta
+[interactive]
+	diffFilter = delta --color-only
+[include]
+  path = /Users/josephburgess/.config/delta/themes/catppuccin.gitconfig
+[delta]
+	features = catppuccin-mocha
+  navigate = true    # use n and N to move between diff sections
+  light = false      # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
+  side-by-side = false
+  line-numbers = true
+[merge]
+	conflictStyle = zdiff3
