Update snacks picker config

--- a/.config/kitty/keymap.conf
+++ b/.config/kitty/keymap.conf
@@ -10,7 +10,6 @@ map ctrl+5 goto_tab 5
 map ctrl+6 goto_tab 6
 map ctrl+7 goto_tab 7
 map ctrl+t new_tab
-map ctrl+w close_tab
 #
 # # Smart-split.nvim keys
 # map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
@@ -50,5 +49,6 @@ map alt+j no_op
 map alt+k no_op
 map alt+h no_op
 map alt+l no_op
+map ctrl+w no_op
 map kitty_mod+o kitten toggle_opacity.py
 map kitty_mod+p kitten toggle_theme.py
