--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -12,28 +12,39 @@ background_blur 10
 # italic_font      auto
 # bold_italic_font auto
 listen_on unix:/tmp/kitty
-tab_bar_edge top
-tab_bar_style separator
-tab_separator " "
-tab_title_template " {index} {title} {bell_symbol}"
+tab_bar_edge bottom
+#tab_bar_style separator
+#tab_separator " "
+#tab_title_template " {index} {title} {bell_symbol}"
 nvim --headless +'KittyScrollbackGenerateKittens'
 allow_remote_control yes
 # listen_on unix:@mykitty
 hide_window_decorations titlebar-only
 shell_integration enabled
 dynamic_background_opacity yes
-tab_bar_style powerline
-tab_powerline_style slanted
+#tab_bar_style powerline
+#tab_powerline_style slanted
 # single_window_margin_width 0
 # draw_minimal_borders       False
 # window_border_width        1
 # window_margin_width        2.5
 # window_padding_width       5.0
 include current-theme.conf
-
+cursor_trail 3
 # BEGIN_KITTY_FONTS
 font_family family='JetBrainsMono Nerd Font Mono' style=Regular
 bold_font family='JetBrainsMono Nerd Font Mono' style=SemiBold
 italic_font auto
 bold_italic_font auto
 # END_KITTY_FONTS
+tab_bar_edge top
+tab_bar_align left
+tab_bar_style custom
+tab_bar_min_tabs 2
+tab_activity_symbol none
+bell_on_tab no
+tab_separator ""
+tab_bar_margin_width 0.0
+tab_bar_margin_height 0.0 0.0
+tab_title_template "{f'{title[:30]}…' if title.rindex(title[-1]) + 1 > 30 else (title.center(6) if (title.rindex(title[-1]) + 1) % 2 == 0 else title.center(5))}"
+active_tab_font_style   bold
