--- a/.config/nvim/.luarc.json
+++ b/.config/nvim/.luarc.json
@@ -1,5 +1,21 @@
 {
-    "diagnostics.disable": [
-        "missing-fields"
-    ]
+  "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
+  "Lua.diagnostics.globals": ["vim", "LazyVim"],
+  "Lua.diagnostics.disable": [
+    "lowercase-global",
+    "undefined-field",
+    "undefined-global",
+    "assign-type-mismatch",
+    "missing-fields"
+  ],
+  "Lua.workspace.checkThirdParty": false,
+  "Lua.workspace.library": [
+    "${3rd}/luv/library",
+    "${3rd}/busted/library",
+    "${3rd}/luassert/library",
+    "${3rd}/luarocks/library"
+  ],
+  "Lua.completion.callSnippet": "Replace",
+  "Lua.telemetry.enable": false
 }
+
