--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -1,5 +1,8 @@
 {
-  "theme": "Tokyo Night",
+  "features": {
+    "edit_prediction_provider": "zed"
+  },
+  "theme": "Rosé Pine",
   "ui_font_size": 15,
   "buffer_font_size": 15,
   "buffer_font_family": "JetBrainsMono Nerd Font",
